# Moneyz

./: Cargo.toml  README.md  build.rs
src/: config.rs  data.rs  data_to_model.rs  file_loader.rs  main.rs  main_window.rs  translation_provider.rs
translations/: en.json  en_GB.json  fr.json  fr_FR.json
